--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -111,7 +111,7 @@
           <table>
             <tr>
               <td>
-                <div class="logo-block"><a href="/" class="logo"><img src="/templates/satra/images/logo.svg" alt="Интернет-магазин сантехники в Москве"></a></div>
+                <div class="logo-block"><a href="/" class="logo"><img src="https://ruslanmmr.github.io/Shop/landing/app/img/winter-logo.png" alt="Интернет-магазин сантехники в Москве"></a></div>
               </td>
               <td>
                 <div class="head-phone">
@@ -168,13 +168,9 @@
       </div>
     </header>
 
-    <!--Новый лендинг-->
     <div id="content">
-      <!--Шрифты только для демонстрации, удалить на сатре-->
-      <link rel="stylesheet" type="text/css" href="https://ruslanmmr.github.io/Shop/landing/app/css/fonts.css" media="all">
-      <!---->
+      <!--Новый лендинг-->
       <link rel="stylesheet" type="text/css" href="https://ruslanmmr.github.io/Shop/landing/app/css/landing-page.css" media="all">
-
       <div class="landing">
         <div class="top-section">
           <div class="landing__container">
@@ -223,135 +219,135 @@
         <div class="product-section">
           <div class="landing__container">
             <div class="product-section__content">
-                <div class="product-section__blocks-wrapper">
-                  <!--product-->
-                  <div class="product-section__block product-block product-block_padding">
-                    <a href="#" class="product-block__link">
-                      <div class="product-block__img-section">
-                        <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
-                          alt="">
-                        <div class="product-block__stick discount-stick">
-                          <div class="discount-stick__value">-90%</div>
-                        </div>
+              <div class="product-section__blocks-wrapper">
+                <!--product-->
+                <div class="product-section__block product-block product-block_padding">
+                  <a href="#" class="product-block__link">
+                    <div class="product-block__img-section">
+                      <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
+                        alt="">
+                      <div class="product-block__stick discount-stick">
+                        <div class="discount-stick__value">-90%</div>
                       </div>
-                      <div class="product-block__description-section">
-                        <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
-                          1</div>
-                        <div class="product-block__price-container">
-                          <div class="product-block__old-price">10 000</div>
-                          <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
-                        </div>
+                    </div>
+                    <div class="product-block__description-section">
+                      <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
+                        1</div>
+                      <div class="product-block__price-container">
+                        <div class="product-block__old-price">10 000</div>
+                        <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
                       </div>
-                    </a>
-                  </div>
-                  <!--product-->
-                  <div class="product-section__block product-block">
-                    <a href="#" class="product-block__link">
-                      <div class="product-block__img-section">
-                        <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
-                          alt="">
-                        <div class="product-block__stick discount-stick">
-                          <div class="discount-stick__value">-90%</div>
-                        </div>
-                      </div>
-                      <div class="product-block__description-section">
-                        <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
-                          1</div>
-                        <div class="product-block__price-container">
-                          <div class="product-block__old-price">10 000</div>
-                          <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                  <!--product-->
-                  <div class="product-section__block product-block product-block_padding">
-                    <a href="#" class="product-block__link">
-                      <div class="product-block__img-section">
-                        <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
-                          alt="">
-                        <div class="product-block__stick discount-stick">
-                          <div class="discount-stick__value">-90%</div>
-                        </div>
-                      </div>
-                      <div class="product-block__description-section">
-                        <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
-                          1</div>
-                        <div class="product-block__price-container">
-                          <div class="product-block__old-price">10 000</div>
-                          <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
+                    </div>
+                  </a>
                 </div>
-                <div class="product-section__link-wrapper link-wrapper">
-                  <div class="link-wrapper__item">
-                      <a class="link-wrapper__link" href="#">смотреть все</a>
-                  </div>
+                <!--product-->
+                <div class="product-section__block product-block">
+                  <a href="#" class="product-block__link">
+                    <div class="product-block__img-section">
+                      <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
+                        alt="">
+                      <div class="product-block__stick discount-stick">
+                        <div class="discount-stick__value">-90%</div>
+                      </div>
+                    </div>
+                    <div class="product-block__description-section">
+                      <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
+                        1</div>
+                      <div class="product-block__price-container">
+                        <div class="product-block__old-price">10 000</div>
+                        <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
+                      </div>
+                    </div>
+                  </a>
                 </div>
-                <div class="product-section__blocks-wrapper">
-                  <!--product-->
-                  <div class="product-section__block product-block">
-                    <a href="#" class="product-block__link">
-                      <div class="product-block__img-section">
-                        <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
-                          alt="">
-                        <div class="product-block__stick discount-stick">
-                          <div class="discount-stick__value">-90%</div>
-                        </div>
+                <!--product-->
+                <div class="product-section__block product-block product-block_padding">
+                  <a href="#" class="product-block__link">
+                    <div class="product-block__img-section">
+                      <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
+                        alt="">
+                      <div class="product-block__stick discount-stick">
+                        <div class="discount-stick__value">-90%</div>
                       </div>
-                      <div class="product-block__description-section">
-                        <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
-                          1</div>
-                        <div class="product-block__price-container">
-                          <div class="product-block__old-price">10 000</div>
-                          <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
-                        </div>
+                    </div>
+                    <div class="product-block__description-section">
+                      <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
+                        1</div>
+                      <div class="product-block__price-container">
+                        <div class="product-block__old-price">10 000</div>
+                        <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
                       </div>
-                    </a>
-                  </div>
-                  <!--product-->
-                  <div class="product-section__block product-block product-block_padding">
-                    <a href="#" class="product-block__link">
-                      <div class="product-block__img-section">
-                        <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
-                          alt="">
-                        <div class="product-block__stick discount-stick">
-                          <div class="discount-stick__value">-90%</div>
-                        </div>
-                      </div>
-                      <div class="product-block__description-section">
-                        <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
-                          1</div>
-                        <div class="product-block__price-container">
-                          <div class="product-block__old-price">10 000</div>
-                          <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                  <!--product-->
-                  <div class="product-section__block product-block">
-                    <a href="#" class="product-block__link">
-                      <div class="product-block__img-section">
-                        <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
-                          alt="">
-                        <div class="product-block__stick discount-stick">
-                          <div class="discount-stick__value">-90%</div>
-                        </div>
-                      </div>
-                      <div class="product-block__description-section">
-                        <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
-                          1</div>
-                        <div class="product-block__price-container">
-                          <div class="product-block__old-price">10 000</div>
-                          <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
+                    </div>
+                  </a>
                 </div>
+              </div>
+              <div class="product-section__link-wrapper link-wrapper">
+                <div class="link-wrapper__item">
+                  <a class="link-wrapper__link" href="#">смотреть все</a>
+                </div>
+              </div>
+              <div class="product-section__blocks-wrapper">
+                <!--product-->
+                <div class="product-section__block product-block">
+                  <a href="#" class="product-block__link">
+                    <div class="product-block__img-section">
+                      <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
+                        alt="">
+                      <div class="product-block__stick discount-stick">
+                        <div class="discount-stick__value">-90%</div>
+                      </div>
+                    </div>
+                    <div class="product-block__description-section">
+                      <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
+                        1</div>
+                      <div class="product-block__price-container">
+                        <div class="product-block__old-price">10 000</div>
+                        <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <!--product-->
+                <div class="product-section__block product-block product-block_padding">
+                  <a href="#" class="product-block__link">
+                    <div class="product-block__img-section">
+                      <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
+                        alt="">
+                      <div class="product-block__stick discount-stick">
+                        <div class="discount-stick__value">-90%</div>
+                      </div>
+                    </div>
+                    <div class="product-block__description-section">
+                      <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
+                        1</div>
+                      <div class="product-block__price-container">
+                        <div class="product-block__old-price">10 000</div>
+                        <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <!--product-->
+                <div class="product-section__block product-block">
+                  <a href="#" class="product-block__link">
+                    <div class="product-block__img-section">
+                      <img class="product-block__img" src="/images/cms/thumbs/ee566ae4809351847a381602fc007a5900dc80e6/installyacii_ideal_standard_medici_ripresa_n0000018217_0jpg_auto_400_5_92.jpg"
+                        alt="">
+                      <div class="product-block__stick discount-stick">
+                        <div class="discount-stick__value">-90%</div>
+                      </div>
+                    </div>
+                    <div class="product-block__description-section">
+                      <div class="product-block__title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в
+                        1</div>
+                      <div class="product-block__price-container">
+                        <div class="product-block__old-price">10 000</div>
+                        <div class="product-block__new-price">12 000<span class="rub">руб.</span></div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -362,7 +358,7 @@
       <div class="foot-in">
         <div class="cont-in">
           <div class="foot-left">
-            <!--noindex--><span class="foot-logo"><img src="/templates/satra/images/logo.svg" alt=""></span>
+            <!--noindex--><span class="foot-logo"><img src="https://ruslanmmr.github.io/Shop/landing/app/img/winter-logo.png" alt=""></span>
             <ul class="foot-left-links">
               <li><span>Гарантия вашего качества</span></li>
               <li><span>Лучшие цены</span></li>
