added content pages to map

--- a/SHOP_dist/app/map.html
+++ b/SHOP_dist/app/map.html
@@ -26,5 +26,16 @@
 	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/search.html">Поиск</a></li>
 	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/supercategory.html">Суперкатегория</a></li>
 </ul>
+<h2>//Контентные страницы</h2>
+<ul>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/about.html">О магазине</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/delivery.html">Доставка</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/payment.html">Гарантия и возврат</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/warranty.html">Доставка</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/choise.html">Как выбрать</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/clients.html">Корпоративным клиентам</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/agreement.html">Пользовательское соглашение</a></li>
+</ul>
+
 
 </html>
