--- a/SHOP_dist/app/map.html
+++ b/SHOP_dist/app/map.html
@@ -30,9 +30,10 @@
 <ul>
 	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/about.html">О магазине</a></li>
 	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/delivery.html">Доставка</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/payment.html">Гарантия и возврат</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/warranty.html">Доставка</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/payment.html">Оплата</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/warranty.html">Гарантия и возврат</a></li>
 	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/choise.html">Как выбрать</a></li>
+	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/choise-category.html">Как выбрать/категория</a></li>
 	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/clients.html">Корпоративным клиентам</a></li>
 	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/agreement.html">Пользовательское соглашение</a></li>
 </ul>
